# algorithm

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
csharp/: .gitignore
csharp/rgb-distance/: RGB.cs  RGB.csproj  RGBTest.cs
gradle/wrapper/: gradle-wrapper.properties
haskell/: build.gradle  haskell.cabal  stack.yaml
haskell/src/main/haskell/aircon/: Main.hs
haskell/src/main/haskell/angryProfessor/: Main.hs
haskell/src/main/haskell/birthdayChocolate/: Main.hs
haskell/src/main/haskell/helloworld/: Main.hs
haskell/src/main/haskell/lilysHomework/: Main.hs
haskell/src/main/haskell/noscenariobaseball/: Main.hs
haskell/src/main/haskell/programmers/: Main.hs  Main2.hs
haskell/src/main/haskell/simpleBalancedParentheses/: Main.hs
haskell/src/main/haskell/stringzip/: Main.hs
haskell/src/main/haskell/sugardelivery/: Main.hs
haskell/src/main/haskell/triplestep/: Main.hs
java/: build.gradle
java/src/main/java/: AngryProfessor.java  BirthdayChocolate.java  BirthdayChocolate_2.java  BreakingTheRecords.java  HelloWorld.java  LilysHomework.java  Lotto.java  Programmers.java
javascript/: build.gradle
javascript/src/scripts/: AfterParty.js  DigitalRoot.js  HelloWorld.js  RecordCounter.js  SimpleBalancedParentheses.js
kotlin/: build.gradle
kotlin/src/main/kotlin/: AfterParty.kt  Aircondition.kt  AngryTeacher.kt  BaseBall.kt  DigitalRoot.kt  DrawRect.kt  ElectronicSaveAircon.kt  FindLargestSquare.kt  HelloWorld.kt  LengthOfLongestSubstring.kt  LilyHomework.kt  LongestSubstring.kt  LongestSubstringFromChanHo.kt  Lotto.kt  Maraton.kt  PriyankaAndToys.kt  Programmers.kt  RefreshRecord.kt  Saddlepoint.kt  SimpleBalancedParentheses.kt  StreetRgb.kt  SugarDelivery.kt
scala/: .gitignore.txt  build.gradle  build.sbt
scala/src/main/scala/: HelloWorld.scala  RGBDistance.scala  RgbDistance2.scala  SaddlePoints.scala
swift/DigitalRoot/DigitalRoot/: main.swift
swift/DigitalRoot/DigitalRoot.xcodeproj/: project.pbxproj
swift/DigitalRoot/DigitalRoot.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift/DrawRect/DrawRect/: Extensions.swift  main.swift
swift/DrawRect/DrawRect.xcodeproj/: project.pbxproj
swift/HelloSwift/HelloSwift/: main.swift
swift/HelloSwift/HelloSwift.xcodeproj/: project.pbxproj
swift/PriyankaAndToys/PriyankaAndToys/: main.swift
swift/PriyankaAndToys/PriyankaAndToys.xcodeproj/: project.pbxproj
swift/PriyankaAndToys/PriyankaAndToys.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
(+6 files in other folders)
