name:                algorithm-haskell
version:             1.0.0.0
author:              Joe Cho
maintainer:          goinhacker@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable helloworld
  main-is:             Main.hs
  hs-source-dirs:      src/main/haskell/helloworld
  build-depends:       base
  default-language:    Haskell2010