name:                algorithm-haskell
version:             1.0.0.0
author:              Joe Cho
maintainer:          goinhacker@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable helloworld
  main-is:             Main.hs
  hs-source-dirs:      src/main/haskell/helloworld
  build-depends:       base
  default-language:    Haskell2010

executable simpleBalancedParentheses
    main-is:             Main.hs
    hs-source-dirs:      src/main/haskell/simpleBalancedParentheses
    build-depends:       base
    default-language:    Haskell2010

--executable saddlePoint
--    main-is:             Main.hs
--    hs-source-dirs:      src/main/haskell/saddlepoint
--    build-depends:       base
--    default-language:    Haskell2010

executable noscenariobaseball
    main-is:             Main.hs
    hs-source-dirs:      src/main/haskell/noscenariobaseball
    build-depends:       base
    default-language:    Haskell2010

executable aircon
    main-is:             Main.hs
    hs-source-dirs:      src/main/haskell/aircon
    build-depends:       base
    default-language:    Haskell2010

executable sugerdelivery
    main-is:             Main.hs
    hs-source-dirs:      src/main/haskell/sugardelivery
    build-depends:       base
    default-language:    Haskell2010

executable birthdayChocolate
  main-is:             Main.hs
  hs-source-dirs:      src/main/haskell/birthdayChocolate
  build-depends:       base
  default-language:    Haskell2010

executable triplestep
  main-is:             Main.hs
  hs-source-dirs:      src/main/haskell/triplestep
  build-depends:       base
  default-language:    Haskell2010

executable stringzip
  main-is:             Main.hs
  hs-source-dirs:      src/main/haskell/stringzip
  build-depends:       base
  default-language:    Haskell2010

executable programmers
  main-is:             Main.hs
  hs-source-dirs:      src/main/haskell/programmers
  build-depends:       base
  default-language:    Haskell2010